plugins {
    id 'java'
}

group 'org.zuhlke'
version '1.0-SNAPSHOT'

sourceCompatibility = 1.8

repositories {
    mavenCentral()
}

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'

    testCompile 'org.hamcrest:hamcrest-all:1.3'
}
